docs: switch the TUI channel to TamboUI (Toolkit on the JLine 3 backend)
Adopt the TamboUI Java terminal-UI library (dev.tamboui, latest release 0.3.0) for the TUI channel, replacing the raw JLine 3 REPL with TamboUI's declarative Toolkit + TCSS styling on the tamboui-jline3-backend. JLine stays as the backend, so the --no-ansi fallback, Windows handling (Risk #6), and GraalVM reflection hints remain valid. TamboUI is GraalVM-native-first (sub-100 ms startup), aligned with the native-mandatory requirement; the tamboui-panama-backend (Java FFM, final on Java 25, preview-free, no external dep) is noted as the native-first alternative.

- forvum-bom pins dev.tamboui:tamboui-bom:0.3.0 (manages tamboui-toolkit + tamboui-jline3-backend, transitively JLine 3); single bump point (§2.1, §3.9 table).
- §2.4, §3.5, header tech stack, and M15 (§7.1 + docs/ISSUES.md + create-issues.sh) rewritten to TamboUI.
- Risk #6 reframed (TamboUI/JLine on Windows; Panama backend escape hatch); new Risk #14 (TamboUI pre-1.0 maturity; raw-JLine fallback confined to forvum-channel-tui).
- M15 [PLUGIN] note: TamboUI is not a Quarkus extension -> context7 for its API.